# mpl-pan-zoom

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  contributing.md  index.ipynb  index.md
docs/examples/: basic-example.ipynb
mpl_pan_zoom/: __init__.py  _pan.py  _zoom.py
tests/: test_mpl_pan_zoom.py
