[metadata]
name = mpl_pan_zoom
description = Panning and zooming with the mouse for matplotlib
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ianhi/mpl-pan-zoom
author = Ian Hunt-Isaak
author_email = ianhuntisaak@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Source Code =https://github.com/ianhi/mpl-pan-zoom

[options]
packages = find:
install_requires =
    matplotlib
    numpy
python_requires = >=3.9
zip_safe = False

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    ipython
    isort
    jedi<0.18.0
    mypy
    pre-commit
    pydocstyle
    pytest
doc =
    Sphinx>=1.5
    jupyter-sphinx
    myst-nb
    numpydoc
    sphinx-book-theme
    sphinx-copybutton
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton
testing =
    nbval
    pytest
    pytest-cov
    tox
    tox-conda

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
